[SC-9820] fixed errors in organization tree component, added overflow hidden to avoid scrolling of headline, added scrolling ot organization tree

--- a/src/app/admin/organization-units/organization-tree/organization-tree.component.less
+++ b/src/app/admin/organization-units/organization-tree/organization-tree.component.less
@@ -9,3 +9,7 @@
         }
     }
 }
+
+.m-portlet .m-portlet__body {
+    padding: 31px;
+}
